# kando

./: .dockerignore  .gitignore  CHARTER.md  Dockerfile  Makefile  PLAN.md  README.md  SESSION_2026-06-06_19-29-39.md  SESSION_2026-06-06_20-36-00.md  TODO.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.engineer/: consolidation.md  manifest.yml
.engineer/handoffs/: onboard-2026-06-06.md  prime-context-001-world-2026-06-06.md
.github/workflows/: docs.yml
docs/: architecture.md  cli.md  concepts.md  contributing.md  index.md  mcp.md  quickstart.md
docs/adr/: ADR-001-event-log-as-source-of-truth.md  ADR-002-responder-pattern.md  ADR-003-world-as-deterministic-projection.md  ADR-004-budget-enforcement-at-runtime.md  ADR-005-intention-effect-split.md  ADR-006-object-patched-shallow-merge.md  ADR-007-llm-executor-as-pluggable-factory.md  ADR-008-uuid-based-event-ids.md  ADR-009-llm-cache-via-world-context.md  ADR-010-branch-fork-via-prefix-cache.md  ADR-011-synchronous-runtime-loop.md  ADR-012-hash-verified-replay.md  ADR-013-schema-boundary-contracts.md  ADR-014-multi-agent-concurrency.md  ADR-015-edge-logic-registry.md  index.md
docs/api/: branch.md  budget.md  cache.md  delivery.md  index.md  ledger.md  llm_executor.md  runtime.md  trace.md  world.md
docs/kits/: authoring.md  diligence.md  index.md  research.md
docs/stylesheets/: extra.css
features/: branch.feature  cache.feature  ledger.feature  runtime.feature  trace.feature  world.feature
features/001-world/: acs.md  feature.md  plan.md  spec.md
features/001-world/handoffs/: 2026-06-06T1934-discover-acs.md  2026-06-06T1940-atdd.md  2026-06-06T2010-plan.md
features/003-runtime/: feature.md
features/steps/: branch_steps.py  cache_steps.py  ledger_steps.py  runtime_steps.py  trace_steps.py  world_spec_steps.py  world_steps.py
kando/: runtime.py
kando/branch/: diff.py  fork.py  replay.py
kando/cache/: llm.py
kando/cli/: main.py
kando/ledger/: interface.py  memory.py  stream.py
kando/mcp/: server.py
kando/responders/: anthropic_llm.py  base.py  budget.py  delivery.py  edge.py  llm_executor.py  openrouter_llm.py
kando/schema/: events.py
kando/trace/: lineage.py
kando/world/: graph.py  projection.py  snapshot.py
kits/: README.md  __init__.py
kits/diligence/: README.md  __init__.py  kit.py
kits/research/: README.md  kit.py
mcp/: server.py
tests/: test_branch.py  test_budget_full.py  test_cache.py  test_crash.py  test_delivery.py  test_determinism.py  test_diligence_kit.py  test_ledger.py  test_ledger_stream.py  test_mcp_dispatch.py  test_multi_agent.py  test_mutation_killers.py  test_projection.py  test_properties.py  test_replay.py  test_research_kit.py  test_runtime.py  test_snapshot.py  test_trace.py
tutorials/: 01-your-first-run.md  02-ledger-is-the-agent.md  03-responders.md  04-branching-and-diffing.md  05-tracing-causality.md  06-building-a-kit.md  07-mcp-integration.md  README.md
views/: lineage_index.js  run_metrics.js  world_state.js
