[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kando"
version = "0.1.0"
description = "Production runtime for long-running agents — the event log is the agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
stream = [
    "esdbclient>=22.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6",
    "pytest-bdd>=8",
]

[project.scripts]
kando = "kando.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests", "features/steps"]
python_files = ["test_*.py", "*_steps.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["kando*"]

[tool.mutmut]
paths_to_mutate = [
    "kando/world/",
    "kando/ledger/",
    "kando/cache/",
    "kando/trace/",
    "kando/branch/",
]
also_copy = [
    "kando/schema/",
    "kando/responders/",
    "kando/runtime.py",
    "kando/__init__.py",
]
tests_dir = ["tests/"]
