[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kando"
version = "0.1.0"
description = "Production runtime for long-running agents — the event log is the agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
llm = [
    "anthropic>=0.40",
]
stream = [
    "esdbclient>=1.0",
]
mcp = [
    "mcp>=1.0",
]
all = [
    "anthropic>=0.40",
    "esdbclient>=1.0",
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6",
    "pytest-bdd>=8",
    "esdbclient>=1.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
kando = "kando.cli.main:main"
kando-mcp = "kando.mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests", "features/steps"]
python_files = ["test_*.py", "*_steps.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["kando*", "kits*"]

[tool.mutmut]
source_paths = [
    "kando/world/",
    "kando/ledger/",
    "kando/cache/",
    "kando/trace/",
    "kando/branch/",
]
also_copy = [
    "kando/schema/",
    "kando/responders/",
    "kando/runtime.py",
    "kando/__init__.py",
    "kits/",
    "features/",
]
